Don't crash on closing an article widget opened by clicking a reference while the article isn't fully loaded yet.

BUG: 71102

svn path=/trunk/KDE/kdepim/knode/; revision=949915